# t2

./: Makefile.am  configure.ac  egamibm.h  meobm.cpp  meobm.h  my_fb.cpp  my_fb.h  png.cpp
